--- a/register.html
+++ b/register.html
@@ -7,10 +7,43 @@
 </head>
 <body>
 
-    <button onclick="displayNames();">Display Names</button>
-    <div id="petNames">
-
-    </div>
+    <header>
+        <div>
+            <h1>The Fashion pet</h1>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="register.html">Register</a>
+            </nav>
+        </div>
+    </header>
+    <main>
+        <div>
+            <div>
+                <label>Name: </label>
+                <input type="text" id="txtName">
+            </div>
+            <div>
+                <label>Age: </label>
+                <input type="number" id="txtAge">
+            </div>
+            <div>
+                <label>Gender: </label>
+                <input type="text" id="txtGender">
+            </div>
+            <div>
+                <label>Service: </label>
+                <select id="txtService">
+                    <option value="" disabled selected>-- Select an option --</option>
+                    <option value="grooming">Gromming</option>
+                    <option value="nails">Nails</option>
+                    <option value="vaccines">Vaccines</option>
+                </select>
+            </div>
+            <div>
+                <button onclick="register()">Register</button>
+            </div>
+        </div>
+    </main>
     <script src="./scripts/register.js"></script>
 </body>
 </html>
