--- a/register.html
+++ b/register.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/bootstrap.css">
+    <link rel="stylesheet" href="./styles/mystyle.css">
     <title>Document</title>
 </head>
 <body>
@@ -17,33 +19,56 @@
         </div>
     </header>
     <main>
-        <div>
-            <div>
+        <div class="container-sm">
+            <h2>Register a new pet</h2>
+            <div class="mb-3">
                 <label>Name: </label>
-                <input type="text" id="txtName">
+                <input class="form-control" type="text" id="txtName">
             </div>
-            <div>
+            <div class="mb-3">
                 <label>Age: </label>
-                <input type="number" id="txtAge">
+                <input class="form-control" type="number" id="txtAge">
             </div>
-            <div>
+            <div class="mb-3">
                 <label>Gender: </label>
-                <input type="text" id="txtGender">
+                <input class="form-control" type="text" id="txtGender">
             </div>
-            <div>
+            <div class="mb-3">
                 <label>Service: </label>
-                <select id="txtService">
+                <select class="form-select"  id="txtService">
                     <option value="" disabled selected>-- Select an option --</option>
                     <option value="grooming">Gromming</option>
                     <option value="nails">Nails</option>
                     <option value="vaccines">Vaccines</option>
                 </select>
             </div>
-            <div>
-                <button onclick="register()">Register</button>
+            <div class="mb-3">
+                <button class="btn btn-dark" onclick="register()">Register</button>
             </div>
         </div>
+
+        <div class="container-sm">
+            <h2>Registered pets</h2>
+            <div>
+                <p>Total= <span id="total">hello</span></p>
+            </div>
+            <div id="pets">
+                <!-- all the pets are going to be displayed here!!! -->
+            </div>
+
+            <table>
+                <thead>
+
+                </thead>
+                <tbody>
+                    <!-- here the rows are displayed-->
+                </tbody>
+            </table>
+        </div>
+
+
     </main>
     <script src="./scripts/register.js"></script>
+    <script src="./scripts/display.js"></script>
 </body>
 </html>
