creating the table

--- a/register.html
+++ b/register.html
@@ -56,11 +56,15 @@
                 <!-- all the pets are going to be displayed here!!! -->
             </div>
 
-            <table>
+            <table class="table">
                 <thead>
-
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Gender</th>
+                    <th>Service</th>
+                    <th>Action</th>
                 </thead>
-                <tbody>
+                <tbody id="petTable">
                     <!-- here the rows are displayed-->
                 </tbody>
             </table>
